DemoMetadata/unpackaged/objects/FSL__GanttPalette__c.object
<CustomObject>
    <fields>
        <fullName>FSL__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__ColorLevel__c</fullName>
        <defaultValue>6</defaultValue>
        <label>Color Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__ColorScheme__c</fullName>
        <label>Color Scheme</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FSL__ServiceProperty__c</fullName>
        <label>Service Property</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Gantt Palette</label>
    <listViews>
        <fullName>FSL__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Gantt Palette Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gantt Palettes</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>FSL__FSL_Public_Gantt_Palette__c</fullName>
        <label>FSL Public Gantt Palette</label>
    </sharingReasons>
    <validationRules>
        <fullName>FSL__Color_Level_validation</fullName>
        <active>true</active>
        <errorConditionFormula>FSL__ColorLevel__c &lt; 4 || FSL__ColorLevel__c &gt; 15</errorConditionFormula>
        <errorDisplayField>FSL__ColorLevel__c</errorDisplayField>
        <errorMessage>Color level value cannot be less than 4 or greater than 15</errorMessage>
    </validationRules>
</CustomObject>